feat: movie item

--- a/starter-code/src/app/app.component.html
+++ b/starter-code/src/app/app.component.html
@@ -1,1 +1,10 @@
-<router-outlet></router-outlet>
+<div class="container">
+    <div class="row">
+        <div class="col-xs-12 text-center">
+            <img src="assets/img/logo.png" alt="Logo">
+        </div>
+        <div class="col-xs-12 m-t-40">
+            <router-outlet></router-outlet>
+        </div>
+    </div>
+</div>
